<resources>
    <string name="app_name">SharedExpenses</string>
    <string name="expenses">Despesas</string>
    <string name="new_expense">Nova</string>
    <string name="history">Histórico</string>
    <string name="dummy_section_text">Section %1d is just a dummy section.</string>
    <string name="title">Titulo</string>
    <string name="house_expenses">Despesas de casa</string>
    <string name="contact">Contato</string>
    <string name="save">Salvar</string>
    <string name="received">Recebido</string>
    <string name="check">Visualizar</string>
    <string name="cancel">Cancelar</string>
    <string name="add_expense">Adição de despesa</string>
</resources>
